learn/exams/gallery/lychee-gallery/clusterIp.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: lychee-gallery-service
spec:
  selector:
    app: lychee-gallery
  ports:
  - port: 80
  type: ClusterIP
